<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/lock_object_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lock_object_thread_run"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/lock_class_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lock_class_thread_run"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lock_object_btn"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/lock_fun_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lock_fun_thread_run"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lock_class_btn"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/lock_block_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lock_block_thread_run"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lock_fun_btn"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/lock_static_fun_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lock_static_fun_thread_run"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lock_block_btn"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/sign_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/dialog_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/sign_tv"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        />

    <Button android:id="@+id/dialog_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_logs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>